@@ -10,7 +10,24 @@ STDOUT_FILE=$LOGS_DIR/stdout.log
 JAVA_MEM_OPTS=""
 BITS=`java -version 2>&1 | grep -i 64-bit`
 if [ -n "$BITS" ]; then
-    JAVA_MEM_OPTS=" -server -Xmx2g -Xms2g -Xmn256m -XX:PermSize=128m -Xss256k -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+UseCMSCompactAtFullCollection -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 "
+    JAVA_MEM_OPTS=" -server 
+    -Xmx2g 
+    -Xms2g 
+    -Xmn256m 
+    -XX:PermSize=128m 
+    -Xss256k 
+    -XX:+DisableExplicitGC 
+    -XX:+UseConcMarkSweepGC 
+    -XX:+CMSParallelRemarkEnabled 
+    -XX:+UseCMSCompactAtFullCollection 
+    -XX:LargePageSizeInBytes=128m 
+    -XX:+UseFastAccessorMethods 
+    -XX:+UseCMSInitiatingOccupancyOnly 
+    -XX:CMSInitiatingOccupancyFraction=70
+    -XX:+PrintGCDetails 
+    -Xloggc:$DEPLOY_DIR/gc.log
+    -XX:+HeapDumpOnOutOfMemoryError 
+    -XX:HeapDumpPath=$DEPLOY_DIR "
 else
     JAVA_MEM_OPTS=" -server -Xms1g -Xmx1g -XX:PermSize=128m -XX:SurvivorRatio=2 -XX:+UseParallelGC "
 fi
